k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-client
  labels:
    istio-injection: enabled
